--- a/src/components/style/Header.css
+++ b/src/components/style/Header.css
@@ -23,9 +23,18 @@ box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
 
 .name {
-text-decoration: none;
-cursor: pointer;
-z-index: 10005;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  text-decoration: none;
+  cursor: pointer;
+  z-index: 10005;
+}
+
+.name img{
+  width: 2.5vw;
 }
 
 .Title {
