--- a/src/style/About.css
+++ b/src/style/About.css
@@ -202,7 +202,7 @@
 .about-img-placeholder {
   width: 100%;
   height: 100%;
-  background-image: url('https://images.unsplash.com/photo-1544719576-904e2d01e057?q=80&w=1974&auto=format&fit=crop');
+  background-image: url('/Louvor.jpeg');
   background-size: cover;
   background-position: center;
   border-radius: 15px;
